# Duck

./: .editorconfig  .gitignore  CMakeLists.txt  DKArray.c  DKArray.h  DKBinaryTree.c  DKBinaryTree.h  DKByteArray.c  DKByteArray.h  DKCommonInterfaces.c  DKCommonInterfaces.h  DKComparison.c  DKComparison.h  DKCopying.c  DKCopying.h  DKData.c  DKData.h  DKDictionary.c  DKDictionary.h  DKElementArray.c  DKElementArray.h  DKEnv.c  DKEnv.h  DKEnvApple.h  DKEnvPosix.c  DKEnv_Posix.c  DKFile.c  DKFile.h  DKHashTable.c  DKHashTable.h  DKLifeCycle.c  DKLifeCycle.h  DKLinkedList.c  DKLinkedList.h  DKList.c  DKList.h  DKMemory.c  DKMemory.h  DKNodePool.c  DKNodePool.h  (+37 more)
Duck Tests/: Duck Tests-Prefix.pch  TestDKData.m  TestDKDictionary.m  TestDKList.m  TestDKNumber.m  TestDKObject.m  TestDKRuntime.m  TestDKString.m  testDKNumber.m
Duck-MacOS/: Info.plist
Duck-Tests/: Info.plist  TestDKData.m  TestDKDictionary.m  TestDKEgg.m  TestDKEnum.m  TestDKJSON.m  TestDKList.m  TestDKNumber.m  TestDKPredicate.m  TestDKProperty.m  TestDKRuntime.m  TestDKSet.m  TestDKShell.m  TestDKString.m  TestDKXML.m  test.xml
Duck-Windows/: Duck-Windows.sln  Duck-Windows.vcxproj  Duck.sln  Duck.vcxproj  Duck.vcxproj.filters  HelloWorld.vcxproj  HelloWorld.vcxproj.filters
Duck-iOS/: Info.plist
Duck.xcodeproj/: project.pbxproj
Duck.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Duck.xcodeproj/project.xcworkspace/xcshareddata/: Duck.xccheckout  Duck.xcscmblueprint
Duck.xcodeproj/xcshareddata/xcbaselines/028F1A921B0DCA85006FDFDF.xcbaseline/: Info.plist
Duck.xcodeproj/xcshareddata/xcschemes/: Duck-MacOS.xcscheme  Duck-iOS.xcscheme  libduck.xcscheme
DuckTestSuite/: main.c
HelloWorld/: CMakeLists.txt  HelloWorld.c  HelloWorld.vcxproj
Include/: DKArray.h  DKBinaryTree.h  DKByteArray.h  DKCollection.h  DKConfig.h  DKCopying.h  DKData.h  DKDictionary.h  DKEgg.h  DKElementArray.h  DKEncoding.h  DKFile.h  DKGenericArray.h  DKHashTable.h  DKLinkedList.h  DKList.h  DKNodePool.h  DKNumber.h  DKPlatform.h  DKPointerArray.h  DKPredicate.h  DKProperty.h  DKRuntime.h  DKSet.h  DKStream.h  DKString.h  DKStruct.h  DKUnicode.h  Duck.h
Source/: DKAllocation.c  DKAllocation.h  DKArray.c  DKArray.h  DKBinaryTree.c  DKBinaryTree.h  DKBitList.c  DKBitList.h  DKBoolean.c  DKBoolean.h  DKBuffer.c  DKBuffer.h  DKByteArray.c  DKByteArray.h  DKCollection.c  DKCollection.h  DKComparison.c  DKComparison.h  DKCondition.c  DKCondition.h  DKConfig.h  DKConversion.c  DKConversion.h  DKCopying.c  DKCopying.h  DKData.c  DKData.h  DKDescription.c  DKDescription.h  DKDictionary.c  DKDictionary.h  DKEgg.c  DKEgg.h  DKElementArray.c  DKEncoding.c  DKEncoding.h  DKEnum.c  DKEnum.h  DKFile.c  DKFile.h  (+69 more)
TestBed/: main.c
Tests/: TestDKData.m  TestDKDictionary.m  TestDKEgg.m  TestDKEnum.m  TestDKJSON.m  TestDKList.m  TestDKNumber.m  TestDKPredicate.m  TestDKProperty.m  TestDKRuntime.m  TestDKSet.m  TestDKShell.m  TestDKString.m  Tests-Info.plist  Tests-Prefix.pch
Tools/: BuildToolkit.cmake
scl.xcodeproj/: project.pbxproj
scl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
unicode/: utf.h  utf8.h  utf_impl.c
